--- a/index.html
+++ b/index.html
@@ -2,131 +2,123 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>مملكة علوش | نظام الإدارة الاحترافي</title>
+    <title>مملكة علوش | النظام الشامل</title>
     <style>
-        :root { --king: #bc13fe; --admin: #00ff00; --bg: #080808; }
-        body { margin: 0; background: var(--bg); color: white; font-family: 'Tahoma', sans-serif; overflow: hidden; }
+        :root { --king: #bc13fe; --accent: #00f2fe; --bg: #050505; }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body { background: var(--bg); color: white; font-family: 'Tahoma', sans-serif; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
 
-        /* الهيدر */
-        .top-nav { height: 50px; background: #111; display: flex; align-items: center; justify-content: space-between; padding: 0 20px; border-bottom: 2px solid var(--king); }
+        /* الهيدر العلوي ثابت */
+        .top-nav { height: 55px; background: #111; display: flex; align-items: center; justify-content: space-between; padding: 0 20px; border-bottom: 2px solid var(--king); z-index: 200; }
 
-        .wrapper { display: flex; height: calc(100vh - 50px); }
+        .wrapper { display: flex; flex: 1; overflow: hidden; position: relative; }
 
-        /* القائمة اليسرى (إعدادات الإدارة) */
-        .side-l { width: 250px; background: #121212; border-left: 1px solid #333; padding: 20px; display: none; }
-        .side-l.show { display: block; }
+        /* الجهة اليسرى (إدارة وإعدادات) - تفتح فوق الشات */
+        .side-left { width: 250px; background: #151515; border-left: 1px solid #333; position: absolute; left: -250px; height: 100%; transition: 0.4s; z-index: 150; padding: 20px; }
+        .side-left.active { left: 0; box-shadow: 5px 0 20px rgba(188, 19, 254, 0.4); }
 
-        /* الشات */
-        .chat-main { flex: 1; display: flex; flex-direction: column; background: #000; }
-        #msg-view { flex: 1; padding: 20px; overflow-y: auto; background: url('https://www.transparenttextures.com/patterns/carbon-fibre.png'); }
+        /* منطقة الشات (الوسط) */
+        .chat-main { flex: 1; display: flex; flex-direction: column; background: #000; border-left: 1px solid #222; border-right: 1px solid #222; }
+        #msg-display { flex: 1; padding: 15px; overflow-y: auto; background-image: radial-gradient(#1a1a1a 1px, transparent 1px); background-size: 20px 20px; }
 
-        /* قائمة الأسماء (يمين) مع نظام الرتب */
-        .side-r { width: 220px; background: #121212; border-right: 1px solid #333; }
-        .user-card { padding: 10px; cursor: pointer; border-bottom: 1px solid #222; transition: 0.3s; }
-        .user-card:hover { background: #1a1a1a; }
-        .rank-king { color: var(--king); font-weight: bold; text-shadow: 0 0 5px var(--king); }
-        .rank-admin { color: var(--admin); font-weight: bold; }
+        /* الجهة اليمنى (قائمة الأسماء) - ثابتة دائماً مثل شيلة */
+        .side-right { width: 200px; background: #0f0f0f; display: flex; flex-direction: column; z-index: 100; }
+        .r-header { background: #1a1a1a; padding: 10px; text-align: center; font-size: 12px; color: var(--accent); border-bottom: 1px solid #333; }
+        .u-item { padding: 10px; border-bottom: 1px solid #222; cursor: pointer; font-size: 13px; }
 
-        /* لوحة التحكم (الأسفل) */
-        .footer-tools { background: #151515; padding: 15px; border-top: 1px solid #333; }
+        /* تأثيرات الملك */
+        .king-glow { font-weight: bold; text-shadow: 0 0 10px var(--king); animation: rgb 3s infinite; }
+        @keyframes rgb { 0%, 100% { color: var(--king); } 50% { color: var(--accent); } }
+
+        /* منطقة الكتابة والزخرفة */
+        .input-area { background: #151515; padding: 15px; border-top: 1px solid #333; }
+        .tools { display: flex; gap: 8px; margin-bottom: 10px; }
+        .t-btn { background: #333; color: white; border: none; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 11px; }
+
         .input-row { display: flex; gap: 10px; }
-        input { flex: 1; background: #000; border: 1px solid var(--king); color: white; padding: 10px; border-radius: 5px; outline: none; }
-        .btn { background: var(--king); color: black; font-weight: bold; border: none; padding: 0 20px; border-radius: 5px; cursor: pointer; }
+        input[type="text"] { flex: 1; background: #000; border: 1px solid #444; color: white; padding: 10px; border-radius: 5px; outline: none; }
+        .send-btn { background: var(--king); border: none; padding: 0 20px; border-radius: 5px; cursor: pointer; font-weight: bold; }
 
-        /* نافذة الخيارات عند الضغط على اسم */
-        .admin-popup { position: fixed; background: #222; border: 1px solid var(--king); padding: 10px; border-radius: 8px; display: none; z-index: 1000; }
-        .admin-popup button { display: block; width: 100%; margin: 5px 0; background: #333; color: white; border: none; padding: 5px; cursor: pointer; }
-        .admin-popup button:hover { background: var(--king); }
+        .img-preview { max-width: 150px; border-radius: 8px; border: 1px solid var(--king); margin-top: 10px; }
     </style>
 </head>
 <body>
 
-<div class="top-nav">
-    <div onclick="toggleAdmin()" style="cursor:pointer">🛠️ الإدارة</div>
-    <div style="font-weight:bold; letter-spacing:1px;">MAMLAKAT <span style="color:var(--king)">AALLOUSH</span></div>
-    <div style="color:yellow; font-size:12px;">مرحباً يا ملك</div>
-</div>
-
-<div class="wrapper">
-    <div id="adminPanel" class="side-l">
-        <h3 style="color:var(--king)">لوحة التحكم</h3>
-        <p onclick="sendAlert()">📢 إعلان عام</p>
-        <p>🔇 كتم الجميع</p>
-        <p>🚫 حظر الـ IP</p>
+    <div class="top-nav">
+        <div onclick="toggleL()" style="cursor:pointer; font-size: 22px;">☰</div>
+        <div style="font-weight:bold;">👑 مـمـلـكـة عـلـوش 👑</div>
+        <div style="font-size: 12px; color: gold;">ONLINE: 1,500</div>
     </div>
 
-    <div class="chat-main">
-        <div id="msg-view">
-            <div style="color:gray; text-align:center; font-size:11px;">[ نظام الحماية الملكي نشط ]</div>
+    <div class="wrapper">
+        <div id="sideL" class="side-left">
+            <h3 style="color:var(--king); margin-bottom:15px;">لوحة الإدارة</h3>
+            <div style="cursor:pointer; padding:10px; border-bottom:1px solid #333;">📢 إعلان عام</div>
+            <div style="cursor:pointer; padding:10px; border-bottom:1px solid #333;">🔇 كتم الجميع</div>
+            <div style="cursor:pointer; padding:10px; border-bottom:1px solid #333;">🖼️ تغيير الخلفية</div>
+            <button onclick="toggleL()" style="margin-top:20px; width:100%; background:#c00; color:white; border:none; padding:8px;">إغلاق</button>
         </div>
-        <div class="footer-tools">
-            <div class="input-row">
-                <input type="text" id="chatInput" placeholder="اكتب رسالتك الإدارية...">
-                <button class="btn" onclick="postMsg()">إرسال</button>
+
+        <div class="chat-main">
+            <div id="msg-display">
+                <div style="text-align:center; color:#555; font-size:11px;">[ نظام الحماية الملكي نشط ]</div>
+            </div>
+            
+            <div class="input-area">
+                <div class="tools">
+                    <button class="t-btn" onclick="addText('⚔️')">⚔️</button>
+                    <button class="t-btn" onclick="addText('👑')">👑</button>
+                    <button class="t-btn" onclick="document.getElementById('f').click()">📷 صورة</button>
+                    <input type="file" id="f" hidden onchange="sendImg(event)">
+                </div>
+                <div class="input-row">
+                    <input type="text" id="in" placeholder="اكتب رسالتك هنا...">
+                    <button class="send-btn" onclick="send()">إرسال</button>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="side-r">
-        <div style="background:#222; padding:8px; text-align:center; font-size:12px;">المتواجدون</div>
-        <div class="user-card" onclick="showActions(event, 'علوش الملك')">
-            <span class="rank-king">👑 علوش الملك</span>
-        </div>
-        <div class="user-card" onclick="showActions(event, 'زائر_عراقي')">
-            <span style="color:#ccc;">👤 زائر_عراقي</span>
+        <div class="side-right">
+            <div class="r-header">المتواجدون</div>
+            <div class="u-item"><span class="king-glow">👑 علوش الملك</span></div>
+            <div class="u-item" style="color:#00ff00;">🛡️ مشرف_بغداد</div>
+            <div class="u-item" style="color:#ccc;">👤 زائر_101</div>
         </div>
     </div>
-</div>
-
-<div id="popup" class="admin-popup">
-    <div id="targetName" style="color:var(--king); margin-bottom:10px; font-weight:bold;"></div>
-    <button onclick="adminAction('طرد')">طرد</button>
-    <button onclick="adminAction('كتم')">كتم</button>
-    <button onclick="adminAction('تلوين')">تغيير اللون</button>
-    <button onclick="closePopup()">إغلاق</button>
-</div>
 
 <script>
-    function toggleAdmin() { document.getElementById('adminPanel').classList.toggle('show'); }
+    function toggleL() { document.getElementById('sideL').classList.toggle('active'); }
+    function addText(t) { document.getElementById('in').value += t; }
 
-    function postMsg() {
-        let input = document.getElementById('chatInput');
-        if(!input.value) return;
-        let view = document.getElementById('msg-view');
-        let div = document.createElement('div');
-        div.style.marginBottom = "8px";
-        div.innerHTML = `<span class="rank-king">علوش الملك:</span> <span style="color:white">${input.value}</span>`;
-        view.appendChild(div);
-        input.value = "";
-        view.scrollTop = view.scrollHeight;
+    function send() {
+        let i = document.getElementById('in');
+        if(!i.value) return;
+        appendMsg(i.value, 'text');
+        i.value = "";
     }
 
-    function showActions(e, name) {
-        let p = document.getElementById('popup');
-        document.getElementById('targetName').innerText = name;
-        p.style.display = 'block';
-        p.style.top = e.clientY + 'px';
-        p.style.left = e.clientX + 'px';
+    function appendMsg(content, type) {
+        let d = document.getElementById('msg-display');
+        let m = document.createElement('div');
+        m.style.marginBottom = "10px";
+        let inner = `<span class="king-glow">علوش الملك:</span> `;
+        if(type === 'text') inner += `<span>${content}</span>`;
+        else inner += `<br><img src="${content}" class="img-preview">`;
+        m.innerHTML = inner;
+        d.appendChild(m);
+        d.scrollTop = d.scrollHeight;
     }
 
-    function closePopup() { document.getElementById('popup').style.display = 'none'; }
-
-    function adminAction(action) {
-        let name = document.getElementById('targetName').innerText;
-        alert('تم تنفيذ ' + action + ' على: ' + name);
-        closePopup();
-    }
-
-    function sendAlert() {
-        let msg = prompt("ادخل نص الإعلان العام:");
-        if(msg) {
-            let view = document.getElementById('msg-view');
-            let div = document.createElement('div');
-            div.style.cssText = "background:rgba(255,215,0,0.1); border:1px solid gold; color:gold; padding:10px; text-align:center; margin:10px 0; border-radius:5px;";
-            div.innerHTML = "📢 إعلان إداري: " + msg;
-            view.appendChild(div);
+    function sendImg(e) {
+        let file = e.target.files[0];
+        if(file) {
+            let reader = new FileReader();
+            reader.onload = (ev) => appendMsg(ev.target.result, 'img');
+            reader.readAsDataURL(file);
         }
     }
+
+    document.getElementById('in').addEventListener('keypress', (e) => { if(e.key === 'Enter') send(); });
 </script>
 
 </body>
