--- a/index.html
+++ b/index.html
@@ -2,127 +2,108 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>مملكة علوش | النسخة العالمية الكاملة</title>
+    <title>مملكة علوش | النسخة الثابتة</title>
     <style>
-        :root { --p: #bc13fe; --s: #00f2fe; --dark: #050505; }
+        :root { --king: #bc13fe; --accent: #00f2fe; --panel: #111; }
         * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { background: var(--dark); color: white; font-family: 'Segoe UI', Tahoma, sans-serif; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        body { background: #000; color: white; font-family: 'Tahoma', sans-serif; height: 100vh; overflow: hidden; }
 
-        /* بار علوي احترافي */
-        header { height: 50px; background: #111; border-bottom: 2px solid var(--p); display: flex; align-items: center; padding: 0 15px; justify-content: space-between; z-index: 1000; }
-        
-        /* الحاوية الرئيسية */
-        .app-body { display: flex; flex: 1; position: relative; overflow: hidden; }
+        /* الهيدر */
+        header { height: 50px; background: var(--panel); border-bottom: 2px solid var(--king); display: flex; align-items: center; padding: 0 15px; justify-content: space-between; }
 
-        /* الجهة اليمنى (الأسماء) - أساس شات شيلة */
-        .users-side { width: 220px; background: #0a0a0a; border-left: 1px solid #222; display: flex; flex-direction: column; }
-        .u-search { padding: 10px; background: #151515; }
-        .u-search input { width: 100%; background: #000; border: 1px solid #333; color: white; padding: 5px; font-size: 12px; }
-        .u-list { flex: 1; overflow-y: auto; padding: 10px; }
-        .user { display: flex; align-items: center; gap: 8px; padding: 8px; border-bottom: 1px solid #111; cursor: pointer; transition: 0.2s; }
-        .user:hover { background: #1a1a1a; }
-        .u-avatar { width: 35px; height: 35px; border-radius: 50%; border: 1px solid var(--s); }
+        /* تقسيم الشاشة الرئيسي */
+        .main-grid { 
+            display: grid; 
+            grid-template-columns: 220px 1fr 220px; /* يمين - وسط - يسار */
+            height: calc(100vh - 50px);
+            width: 100%;
+        }
 
-        /* منطقة الدردشة (الوسط) */
-        .chat-side { flex: 1; display: flex; flex-direction: column; background: #000; position: relative; }
-        .chat-tabs { display: flex; background: #151515; border-bottom: 1px solid #222; }
-        .tab { padding: 10px 20px; font-size: 13px; cursor: pointer; border-bottom: 2px solid transparent; }
-        .tab.active { border-color: var(--p); color: var(--p); background: rgba(188, 19, 254, 0.1); }
+        /* جهة اليمين - الأسماء (ثابتة) */
+        .side-right { background: #0a0a0a; border-left: 1px solid #222; overflow-y: auto; }
+        .side-header { background: #1a1a1a; padding: 10px; text-align: center; font-size: 12px; color: var(--accent); }
 
-        #messages { flex: 1; padding: 20px; overflow-y: auto; background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('https://shilah.site/styles/images/bg.png'); background-size: cover; }
+        /* الوسط - الشات */
+        .chat-area { background: #050505; display: flex; flex-direction: column; border-right: 1px solid #222; border-left: 1px solid #222; }
+        #messages { flex: 1; padding: 15px; overflow-y: auto; }
 
-        /* فقاعات الرسائل */
-        .msg { margin-bottom: 15px; animation: fadeIn 0.3s; }
-        .msg-header { font-size: 12px; margin-bottom: 4px; display: flex; align-items: center; gap: 5px; }
-        .msg-text { background: rgba(255,255,255,0.05); padding: 10px; border-radius: 0 15px 15px 15px; display: inline-block; max-width: 80%; border: 1px solid #222; }
-        .king-text { border-color: var(--p); background: rgba(188, 19, 254, 0.05); }
+        /* جهة اليسار - الإدارة */
+        .side-left { background: #0a0a0a; border-right: 1px solid #222; transition: 0.3s; overflow: hidden; }
+        .side-left.closed { width: 0; border: none; } /* ميزة الغلق والفتح */
 
-        /* بار الكتابة المطور */
-        .input-footer { padding: 15px; background: #111; border-top: 1px solid #222; }
-        .tools { display: flex; gap: 15px; margin-bottom: 10px; color: #888; font-size: 18px; }
-        .tools i { cursor: pointer; }
-        .tools i:hover { color: var(--s); }
+        /* رسائل الملك */
+        .king-name { font-weight: bold; text-shadow: 0 0 8px var(--king); animation: glow 2s infinite; }
+        @keyframes glow { 0%, 100% { color: var(--king); } 50% { color: var(--accent); } }
 
-        .write-box { display: flex; gap: 10px; }
-        #msgIn { flex: 1; background: #000; border: 1px solid #333; color: white; padding: 12px; border-radius: 8px; outline: none; }
-        .send-btn { background: var(--p); border: none; padding: 0 25px; border-radius: 8px; color: white; font-weight: bold; cursor: pointer; }
+        /* صندوق الكتابة */
+        .input-bar { background: #111; padding: 15px; border-top: 1px solid #333; }
+        .input-wrap { display: flex; gap: 10px; }
+        input { flex: 1; background: #000; border: 1px solid #444; color: white; padding: 10px; border-radius: 5px; outline: none; }
+        input:focus { border-color: var(--king); }
+        .btn-send { background: var(--king); border: none; padding: 0 20px; color: white; font-weight: bold; cursor: pointer; border-radius: 5px; }
 
-        /* نظام اللمعان */
-        .glow { font-weight: bold; text-shadow: 0 0 10px var(--p); animation: glowAnim 2s infinite; }
-        @keyframes glowAnim { 0%, 100% { color: var(--p); } 50% { color: var(--s); } }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
+        /* أيقونات وأزرار */
+        .user-item { padding: 10px; border-bottom: 1px solid #1a1a1a; font-size: 13px; cursor: pointer; }
+        .user-item:hover { background: #151515; }
     </style>
 </head>
 <body>
 
 <header>
-    <div style="display:flex; align-items:center; gap:10px;">
-        <span style="color:var(--s); cursor:pointer;">☰</span>
-        <strong class="glow">مملكة علوش العالمية</strong>
-    </div>
-    <div style="font-size:12px;">المتواجدون: <span style="color:var(--s)">1,248</span></div>
+    <div style="cursor:pointer; font-size: 20px;" onclick="toggleLeft()">☰</div>
+    <div class="king-name" style="font-size: 18px;">مملكة علوش</div>
+    <div style="font-size: 12px; color: #888;">ID: 777</div>
 </header>
 
-<div class="app-body">
-    <div class="users-side">
-        <div class="u-search"><input type="text" placeholder="بحث عن ملك..."></div>
-        <div class="u-list">
-            <div class="user">
-                <div class="u-avatar" style="background: url('https://via.placeholder.com/35')"></div>
-                <div>
-                    <div class="glow" style="font-size:13px;">👑 علوش الملك</div>
-                    <div style="font-size:10px; color:#0f0;">متصل الآن</div>
-                </div>
-            </div>
-            </div>
+<div class="main-grid">
+    <div class="side-right">
+        <div class="side-header">المتواجدون حالياً</div>
+        <div class="user-item"><span class="king-name">👑 علوش الملك</span></div>
+        <div class="user-item" style="color:#0f0">🛡️ المشرف العام</div>
+        <div class="user-item" style="color:#ccc">👤 زائر_المملكة</div>
     </div>
 
-    <div class="chat-side">
-        <div class="chat-tabs">
-            <div class="tab active">الروم العام</div>
-            <div class="tab">المسابقات</div>
-            <div class="tab">الخاص (0)</div>
-            <div class="tab" style="color:gold;">⭐ متجر الهدايا</div>
-        </div>
-
+    <div class="chat-area">
         <div id="messages">
-            <div class="msg">
-                <div class="msg-header"><span class="glow">👑 علوش الملك</span> <small style="color:#666">10:45 م</small></div>
-                <div class="msg-text king-text">أهلاً بكم في النسخة المتكاملة. تم إضافة نظام السكاشن والخلفيات بنجاح.</div>
+            <div style="color:#444; text-align:center; font-size:11px; margin-top:100px;">[ نظام شيلة نسخة المملكة ]</div>
+        </div>
+        <div class="input-bar">
+            <div class="input-wrap">
+                <input type="text" id="msgIn" placeholder="اكتب رسالتك الملكية...">
+                <button class="btn-send" onclick="send()">إرسال</button>
             </div>
         </div>
+    </div>
 
-        <div class="input-footer">
-            <div class="tools">
-                <span title="إيموجي">😊</span>
-                <span title="رفع صورة" onclick="document.getElementById('f').click()">📷</span>
-                <input type="file" id="f" hidden>
-                <span title="زخرفة">✨</span>
-                <span title="تغيير اللون">🎨</span>
-            </div>
-            <div class="write-box">
-                <input type="text" id="msgIn" placeholder="اكتب رسالتك للمملكة...">
-                <button class="send-btn" onclick="send()">إرسال</button>
-            </div>
-        </div>
+    <div id="leftSide" class="side-left">
+        <div class="side-header" style="color:var(--king)">لوحة التحكم</div>
+        <div class="user-item">👤 ملفي الشخصي</div>
+        <div class="user-item">🎨 تغيير الستايل</div>
+        <div class="user-item">📢 إعلان عام</div>
+        <div class="user-item" style="color:red">🔒 تسجيل خروج</div>
     </div>
 </div>
 
 <script>
-    function send() {
-        let i = document.getElementById('msgIn');
-        if(!i.value) return;
-        let m = document.getElementById('messages');
-        let d = document.createElement('div');
-        d.className = 'msg';
-        d.innerHTML = `
-            <div class="msg-header"><span class="glow">👑 علوش الملك</span> <small style="color:#666">الآن</small></div>
-            <div class="msg-text king-text">${i.value}</div>
-        `;
-        m.appendChild(d);
-        i.value = "";
-        m.scrollTop = m.scrollHeight;
+    function toggleLeft() {
+        document.getElementById('leftSide').classList.toggle('closed');
     }
+
+    function send() {
+        let input = document.getElementById('msgIn');
+        if(!input.value) return;
+        let box = document.getElementById('messages');
+        let div = document.createElement('div');
+        div.style.marginBottom = "10px";
+        div.innerHTML = `<span class="king-name">👑 علوش الملك:</span> ${input.value}`;
+        box.appendChild(div);
+        input.value = "";
+        box.scrollTop = box.scrollHeight;
+    }
+
+    document.getElementById('msgIn').addEventListener('keypress', (e) => {
+        if(e.key === 'Enter') send();
+    });
 </script>
 
 </body>
