--- a/index.html
+++ b/index.html
@@ -2,91 +2,126 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>مملكة علوش | النسخة الثابتة</title>
+    <title>مملكة علوش | نظام اليوتيوب المتكامل</title>
     <style>
-        :root { --king: #bc13fe; --accent: #00f2fe; --panel: #111; }
+        :root { --king: #bc13fe; --accent: #00f2fe; }
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { background: #000; color: white; font-family: 'Tahoma', sans-serif; height: 100vh; overflow: hidden; }
 
-        /* الهيدر */
-        header { height: 50px; background: var(--panel); border-bottom: 2px solid var(--king); display: flex; align-items: center; padding: 0 15px; justify-content: space-between; }
+        /* الهيكل الأساسي */
+        header { height: 50px; background: #111; border-bottom: 2px solid var(--king); display: flex; align-items: center; padding: 0 15px; justify-content: space-between; }
+        .main-grid { display: grid; grid-template-columns: 240px 1fr 220px; height: calc(100vh - 50px); }
 
-        /* تقسيم الشاشة الرئيسي */
-        .main-grid { 
-            display: grid; 
-            grid-template-columns: 220px 1fr 220px; /* يمين - وسط - يسار */
-            height: calc(100vh - 50px);
-            width: 100%;
-        }
+        /* قسم اليوتيوب (اليسار) */
+        .yt-side { background: #0a0a0a; border-left: 1px solid #222; display: flex; flex-direction: column; padding: 10px; }
+        .yt-search-box { display: flex; gap: 5px; margin-bottom: 15px; }
+        .yt-search-box input { flex: 1; background: #000; border: 1px solid #444; color: white; padding: 5px; border-radius: 4px; }
+        #yt-results { flex: 1; overflow-y: auto; }
+        .yt-item { margin-bottom: 10px; cursor: pointer; border: 1px solid #222; padding: 5px; border-radius: 5px; }
+        .yt-item:hover { border-color: var(--king); }
+        .yt-item img { width: 100%; border-radius: 4px; }
+        .yt-item h4 { font-size: 11px; margin-top: 5px; color: #ccc; height: 30px; overflow: hidden; }
 
-        /* جهة اليمين - الأسماء (ثابتة) */
-        .side-right { background: #0a0a0a; border-left: 1px solid #222; overflow-y: auto; }
-        .side-header { background: #1a1a1a; padding: 10px; text-align: center; font-size: 12px; color: var(--accent); }
-
-        /* الوسط - الشات */
-        .chat-area { background: #050505; display: flex; flex-direction: column; border-right: 1px solid #222; border-left: 1px solid #222; }
+        /* الشات (الوسط) */
+        .chat-area { display: flex; flex-direction: column; background: #050505; border-right: 1px solid #222; border-left: 1px solid #222; position: relative; }
         #messages { flex: 1; padding: 15px; overflow-y: auto; }
+        
+        /* مشغل الفيديو المنبثق */
+        #video-player-wrap { display: none; position: absolute; top: 10px; left: 10px; right: 10px; background: #000; border: 2px solid var(--king); z-index: 500; }
+        .close-player { background: red; color: white; border: none; padding: 5px; width: 100%; cursor: pointer; }
 
-        /* جهة اليسار - الإدارة */
-        .side-left { background: #0a0a0a; border-right: 1px solid #222; transition: 0.3s; overflow: hidden; }
-        .side-left.closed { width: 0; border: none; } /* ميزة الغلق والفتح */
-
-        /* رسائل الملك */
+        /* الأسماء (اليمين) */
+        .side-right { background: #0a0a0a; overflow-y: auto; }
         .king-name { font-weight: bold; text-shadow: 0 0 8px var(--king); animation: glow 2s infinite; }
         @keyframes glow { 0%, 100% { color: var(--king); } 50% { color: var(--accent); } }
 
-        /* صندوق الكتابة */
+        /* الكتابة */
         .input-bar { background: #111; padding: 15px; border-top: 1px solid #333; }
-        .input-wrap { display: flex; gap: 10px; }
-        input { flex: 1; background: #000; border: 1px solid #444; color: white; padding: 10px; border-radius: 5px; outline: none; }
-        input:focus { border-color: var(--king); }
-        .btn-send { background: var(--king); border: none; padding: 0 20px; color: white; font-weight: bold; cursor: pointer; border-radius: 5px; }
-
-        /* أيقونات وأزرار */
-        .user-item { padding: 10px; border-bottom: 1px solid #1a1a1a; font-size: 13px; cursor: pointer; }
-        .user-item:hover { background: #151515; }
+        .btn-send { background: var(--king); border: none; padding: 8px 20px; color: white; border-radius: 5px; cursor: pointer; }
     </style>
 </head>
 <body>
 
 <header>
-    <div style="cursor:pointer; font-size: 20px;" onclick="toggleLeft()">☰</div>
-    <div class="king-name" style="font-size: 18px;">مملكة علوش</div>
-    <div style="font-size: 12px; color: #888;">ID: 777</div>
+    <div style="font-size: 20px;">☰</div>
+    <div class="king-name">مملكة علوش - نظام يوتيوب</div>
+    <div style="font-size: 12px; color: #888;">Live Search Active</div>
 </header>
 
 <div class="main-grid">
-    <div class="side-right">
-        <div class="side-header">المتواجدون حالياً</div>
-        <div class="user-item"><span class="king-name">👑 علوش الملك</span></div>
-        <div class="user-item" style="color:#0f0">🛡️ المشرف العام</div>
-        <div class="user-item" style="color:#ccc">👤 زائر_المملكة</div>
+    <div class="yt-side">
+        <h4 style="color:var(--king); margin-bottom:10px;">🔍 بحث يوتيوب</h4>
+        <div class="yt-search-box">
+            <input type="text" id="ytQuery" placeholder="ابحث عن شيلة...">
+            <button onclick="searchYoutube()" style="background:red; border:none; color:white; padding:5px; border-radius:4px; cursor:pointer;">بحث</button>
+        </div>
+        <div id="yt-results"></div>
     </div>
 
     <div class="chat-area">
-        <div id="messages">
-            <div style="color:#444; text-align:center; font-size:11px; margin-top:100px;">[ نظام شيلة نسخة المملكة ]</div>
+        <div id="video-player-wrap">
+            <button class="close-player" onclick="closePlayer()">إغلاق المشغل ✖</button>
+            <div id="player-container"></div>
         </div>
+
+        <div id="messages"></div>
+
         <div class="input-bar">
-            <div class="input-wrap">
-                <input type="text" id="msgIn" placeholder="اكتب رسالتك الملكية...">
-                <button class="btn-send" onclick="send()">إرسال</button>
-            </div>
+            <input type="text" id="msgIn" placeholder="اكتب رسالتك..." style="width: 80%; background:#000; border:1px solid #444; color:white; padding:10px; border-radius:5px;">
+            <button class="btn-send" onclick="send()">إرسال</button>
         </div>
     </div>
 
-    <div id="leftSide" class="side-left">
-        <div class="side-header" style="color:var(--king)">لوحة التحكم</div>
-        <div class="user-item">👤 ملفي الشخصي</div>
-        <div class="user-item">🎨 تغيير الستايل</div>
-        <div class="user-item">📢 إعلان عام</div>
-        <div class="user-item" style="color:red">🔒 تسجيل خروج</div>
+    <div class="side-right">
+        <div style="background:#1a1a1a; padding:10px; text-align:center; font-size:12px;">المتواجدون</div>
+        <div style="padding:10px;"><span class="king-name">👑 علوش الملك</span></div>
     </div>
 </div>
 
 <script>
-    function toggleLeft() {
-        document.getElementById('leftSide').classList.toggle('closed');
+    // ضع مفتاحك هنا لكي يعمل البحث
+    const API_KEY = 'ضع_مفتاح_اليوتيوب_هنا';
+
+    async function searchYoutube() {
+        const query = document.getElementById('ytQuery').value;
+        if (!query) return;
+
+        const url = `https://www.googleapis.com/youtube/v3/search?part=snippet&maxResults=10&q=${query}&type=video&key=${API_KEY}`;
+        
+        try {
+            const response = await fetch(url);
+            const data = await response.json();
+            displayResults(data.items);
+        } catch (error) {
+            alert('تأكد من وضع API KEY الصحيح');
+        }
+    }
+
+    function displayResults(items) {
+        const container = document.getElementById('yt-results');
+        container.innerHTML = '';
+        items.forEach(item => {
+            const div = document.createElement('div');
+            div.className = 'yt-item';
+            div.onclick = () => playVideo(item.id.videoId);
+            div.innerHTML = `
+                <img src="${item.snippet.thumbnails.medium.url}">
+                <h4>${item.snippet.title}</h4>
+            `;
+            container.appendChild(div);
+        });
+    }
+
+    function playVideo(id) {
+        document.getElementById('video-player-wrap').style.display = 'block';
+        document.getElementById('player-container').innerHTML = `
+            <iframe width="100%" height="300" src="https://www.youtube.com/embed/${id}?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        `;
+    }
+
+    function closePlayer() {
+        document.getElementById('video-player-wrap').style.display = 'none';
+        document.getElementById('player-container').innerHTML = '';
     }
 
     function send() {
@@ -95,15 +130,11 @@
         let box = document.getElementById('messages');
         let div = document.createElement('div');
         div.style.marginBottom = "10px";
-        div.innerHTML = `<span class="king-name">👑 علوش الملك:</span> ${input.value}`;
+        div.innerHTML = `<span class="king-name">علوش الملك:</span> ${input.value}`;
         box.appendChild(div);
         input.value = "";
         box.scrollTop = box.scrollHeight;
     }
-
-    document.getElementById('msgIn').addEventListener('keypress', (e) => {
-        if(e.key === 'Enter') send();
-    });
 </script>
 
 </body>
